# murmur

./: .gitignore  README.md  docker-compose.kafka.yml  pyproject.toml  requirements.txt
.github/: deploy.yml
.github/.workflows/: ci.yml
.github/deploy.yml/: deploy.yml
deploy/: Dockerfile.inference  Dockerfile.ingest
deploy/k8s/: 01-kafka-cluster.yaml  02-ingest-deployment.yaml  03-inference-deployment.yaml  04-autoscaling-hpa.yaml
frontend/: package.json
frontend/app/: page.tsx
orchestration/: __init__.py  data_pipeline.py
src/: __init__.py  settings.py
src/detection/: __init__.py  anomaly_detector.py
src/forecasting/: __init__.py  liquid_network.py
src/ingestion/: __init__.py  cuda_stream_processor.py  mock_edge_device.py  stft_kernels.cu
src/mapping/: __init__.py  st_gnn_model.py  topology_graph.py
src/observability/: __init__.py  metrics.py
src/training/: __init__.py  train_pipeline.py
src/translation/: __init__.py  llm_decoder.py
tests/: conftest.py  test_anomaly_detection.py  test_api.py  test_forecasting.py  test_ingestion.py  test_integration.py  test_models.py  test_settings.py  test_sliding_window.py  test_training_pipeline.py
